# delta-null

./: .gitignore  Cargo.toml  README.md  fib.dnc  justfile
core/design/: arch.md  colorlight_i5.md  eabi.md  instructions.md  tinyfpga_bx.md
core/design/peripherals/: hcr.md  logger.md  spi.md  timer.md
core/design/targets/: colorlight_i5.md  tinyfpga_bx.md
core/design/tools/: analyse_encodings.rb
core/examples/: blink.dna  sos_blink.dna  timer_blink.dna
core/gateware/: .gitignore  __init__.py  core_sim.py  program.py  requirements.txt
core/gateware/tests/: helpers.py  test_core.py  test_core_stages.py  test_register_file.py  test_spi.py  test_timer.py  test_tinyfpga_bx.py  test_uart_logger.py
core/lib/assembler/: Cargo.toml
core/lib/emulator/: Cargo.toml
core/lib/emulator-protocol/: Cargo.toml
core/lib/instructions/: Cargo.toml  expansion.rs
core/lib/macros/: Cargo.toml
gadget/: ili9341.dnc  life.dnc  main.dnc
gadget/util/: convert_plaintext_to_buffer_init.rb  glidergun.pt
lang/examples/: blink.dnc  fact.dnc  i2c_demo.dnc  logger.dnc  simple.dnc  spi.dnc  uart.dnc
lang/lib/backend/: Cargo.toml
lang/lib/backend-core/: Cargo.toml
lang/lib/backend-core/src/: asm.rs  codegen.rs  lib.rs  peephole.rs  reg_alloc.rs  reg_pref.rs  test_utils.rs
lang/lib/backend-core/src/codegen/: allocation.rs  amble.rs  compile.rs  compile_call.rs  helpers.rs  info.rs  mod.rs
lang/lib/frontend/: Cargo.toml
lang/stdlib/: gpio.dnc  hcr.dnc  i2c.dnc  logger.dnc  memory.dnc  spi.dnc  string.dnc  timer.dnc
lang/test/: Cargo.toml
testbench/: main.dnc
(+63 files in other folders)
