[workspace]

members = [
    "core/lib/instructions",
    "core/lib/emulator",
    "core/lib/emulator-protocol",
    "core/lib/macros",
    "core/lib/assembler",

    "core/bin/assembler",
    "core/bin/emulator-backend",
    "core/bin/emulator-frontend",

    "lang/lib/backend",
    "lang/lib/backend-core",
    "lang/lib/frontend",
]
